plugins/xpath/xpath-lang/testData/xpath2/highlighting/invalidNodeTypePredicate.xpath2
(1, 2)[<error descr="Axis step cannot be used here: the context item is an atomic value">@foo</error>]